samples/_failures_safe/1761166537_a0098c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3ad97dab.c: In function ‘main’:
./samples/SAFE/__tmp_3ad97dab.c:163:5: error: expected expression at end of input
  163 |     if (
      |     ^~
./samples/SAFE/__tmp_3ad97dab.c:163:5: error: expected declaration or statement at end of input
